# SFMLResources

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  version.hh
src/: main.cpp  resourceholder.hh
